creacion de endpoint que me permite actualizar  boletines
