# pkg/api/v1/router.go
@@ -1,9 +1,8 @@
 package v1
 
 import (
-	"newsletter-app/pkg/service"
-
 	"newsletter-app/pkg/infrastructure/adapters/email"
+	"newsletter-app/pkg/service"
 
 	"github.com/gorilla/mux"
 	httpSwagger "github.com/swaggo/http-swagger"
@@ -31,6 +30,7 @@ func SetupRouter() *mux.Router {
 	r.HandleFunc("/api/v1/subscribe/{email}/{category}", SubscribeHandler(subscriberService)).Methods("POST")
 	r.HandleFunc("/api/v1/unsubscribe/{email}", UnsubscribeHandler(subscriberService)).Methods("DELETE")
 	r.HandleFunc("/api/v1/subscribers/{email}", GetSubscriberHandler(subscriberService)).Methods("GET")
+	r.HandleFunc("/api/v1/newsletters", UpdateNewsletterHandler(newsletterService)).Methods("PUT")
 
 	// Agregar ruta para enviar boletín
 	r.HandleFunc("/api/v1/newsletters/send/{newsletterID}", SendNewsletterHandler(subscriberService, newsletterService, emailSender)).Methods("POST")
